@@ -1,6 +1,7 @@
 
 v1.9.7:
  - BUG FIX: clean old redis fetch job in time on reloading ProxyFloat escaper
+ - BUG FIX: clean old dynamic user fetch job in time on user group reloading
  - Feature: support TLS redis server
  - Removed: remove redis cluster support, a redis proxy should be used in front of the redis cluster
 
